--- a/HTML/css/styles.css
+++ b/HTML/css/styles.css
@@ -73,7 +73,7 @@ body{
     margin-bottom: 25px;
 }
 
-.header-content__btn{
+.button{
     display: inline-block;
     border: 1px solid #fff;
     padding: 30px 62px; 
@@ -81,8 +81,83 @@ body{
     transition: all .5s;
 }
 
-.header-content__btn:hover{
+.button:hover{
     background-color: #770302;
+}
+
+.menu{
+    background-color: #0B0B0B;
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    transition: all 0.5s;
+    z-index: 7;
+}
+
+.menu.active{
+    left: 0;
+}
+
+.container-menu{
+    position: relative;
+}
+
+.close-btn{
+    width: 50px;
+    height: 50px;
+    background-color: #0b0b0b;
+    position: absolute;
+    top: 31px;
+    right: 15px;
+    cursor: pointer;
+}
+
+.close-btn::after,
+.close-btn::before{
+    content: "";
+    width: 70px;
+    height: 2px;
+    background-color: #fff;
+    position: absolute;
+    transform-origin: left;
+}
+
+.close-btn::after{
+    transform: rotate(45deg);
+}
+
+.close-btn::before{
+    transform: rotate(-45deg);
+    bottom: -1px;
+}
+
+.menu__list{
+    height: 100vh;
+    display: flex;
+    align-items: center;
+}
+
+.menu__list ul{
+    list-style: none;
+}
+
+.menu__list a{
+    font-size: 48px;
+    line-height: 56px;
+    font-weight: bold;
+    padding: 30px 25px 14px 0;
+    border-bottom: 3px solid #B70021;
+    display: inline-block;
+    min-width: 368px;
+    transition: all 0.5s;
+}
+
+.menu__list a:hover{
+    border-color: #fff;
+    color: #B70021;
+    transform: scale(1.2);
+    margin-left: 37px;
 }
 
 .slider__item{
@@ -90,4 +165,180 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+}
+
+.slider .slick-dots button{
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background-color: #0B0B0B;
+    border: none;
+    padding: 0;
+    font-size: 0;
+    cursor: pointer;
+    outline: none;
+}
+
+.slider .slick-dots .slick-active button{
+    background-color: #fff;
+}
+
+.slider .slick-dots li{
+    display: inline-block;
+    margin: 0 5px;
+}
+
+.slider .slick-dots{
+    margin: -55px auto 0;
+    position: relative;
+    z-index: 6;
+    max-width: 1200px;
+
+} 
+
+.statistics{
+    margin: 160px 0 100px;
+}
+
+.satistics-items{
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+}
+
+.statistic-item__title{
+ margin-bottom: 19px;
+}
+
+.statistic-item__num{
+ font-size: 96px;
+ line-height: 112px;
+ margin-bottom: 7px;
+ font-family: 'Roboto', sans-serif;
+}
+
+.statistic-item__num span{
+ font-size: 24px;
+ line-height: 28px;
+ margin-left: -20px;
+}
+
+.statistic-item__descr{
+ color: #B70021
+}
+
+.statistic-item__num--speed span{
+    display: inline-block;
+    position: relative;
+}
+
+.statistic-item__num--speed span::before{
+    content: '+';
+    position: absolute;
+    top: -60px;
+
+}
+
+.video {
+    margin-bottom: 100px; 
+}
+
+.advantages-inner__row {
+    margin-bottom: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+}
+
+.advantages__title {
+    font-size: 36px;
+    color: #B70021;
+    line-height: 42px;
+    position: absolute;
+    top: 0;
+}
+
+.advantages__title--bottom{
+    right: 0;
+    bottom: 0;
+    top: auto;
+}
+
+.advantages__text {
+    width: 303px;
+
+}
+
+.advantages__text ul {
+    list-style: none;
+    padding: 0;
+}
+
+.advantages-descr {
+    max-width: 570px;
+    width: 100%;
+}
+
+.design-images {
+    margin-bottom: 100px;
+}
+
+.design-row {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 100px;
+}
+
+.design-row__item{
+    max-width: 570px;
+    width: 100%;
+    padding-right: 15px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.design-row__item-num {
+    color:#B70021;
+}
+
+.design-row__item-text {
+    max-width: 430px;
+    padding-top: 25px;
+}
+
+.footer{
+    background-color: #B70021;
+    padding: 83px 0 13px;
+}
+
+.footer-btn{
+    text-align: center;
+    margin-bottom: 83px;
+}
+
+.footer-btn .button:hover{
+    background-color:#0B0B0B;
+}
+
+.footer-copy {
+    text-align: center;
+    font-weight: 700;
+}
+
+.footer-copy ul{
+    list-style: none;
+    margin-bottom: 0;
+}
+
+.footer-copy li{
+    display: inline-block; 
+    padding: 0 10px;
+    position: relative;
+}
+
+.footer-copy li + li::before{
+    content: '|';
+    position: absolute;
+    left: -5px;
 }
